--- a/api/manager/requirements.txt
+++ b/api/manager/requirements.txt
@@ -1,9 +1,11 @@
 aniso8601==3.0.0
+boto==2.48.0
 click==6.7
 Flask==1.0.2
 Flask-Cache==0.13.1
 flask-mongoengine==0.9.5
 Flask-RESTful==0.3.6
+Flask-Testing==0.7.1
 Flask-WTF==0.14.2
 itsdangerous==0.24
 Jinja2==2.10
