--- a/api/manager/requirements.txt
+++ b/api/manager/requirements.txt
@@ -10,6 +10,8 @@ Flask-WTF==0.14.2
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
+marshmallow==2.15.3
+marshmallow-jsonapi==0.20.0
 mongoengine==0.15.0
 pymongo==3.6.1
 pytz==2018.4
